--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -3,3 +3,32 @@ kamon.executors {
   # Interval at which all registered executor metrics will be sampled.
   sample-interval = 500 milliseconds
 }
+
+kanela {
+  show-banner = true
+  debug-mode = false
+  log-level = "INFO"
+  modules {
+    executors-module {
+      inject-in-bootstrap = true
+      name = "Kamon Executors Module"
+      instrumentations = [
+        "kamon.executors.instrumentation.ExecutorInstrumentation"
+      ]
+      within = [
+        "java.util.concurrent..*",
+        "kamon.executors..*"
+      ]
+    }
+  }
+  class-dumper {
+    # Enables the class dumper.
+    enabled = false
+    # Default dir.
+    dir = ${user.home}"/kanela-agent/dump"
+    # By default build a jar containing all instrumented classes.
+    create-jar = true
+    # Default jar name.
+    jar-name = "instrumented-classes-executors"
+  }
+}
