--- a/kamon-executors/src/main/resources/reference.conf
+++ b/kamon-executors/src/main/resources/reference.conf
@@ -6,11 +6,13 @@ kamon.executors {
 
 kanela {
   show-banner = true
-  debug-mode = true
   log-level = "INFO"
+  debug-mode = true
+
   modules {
     executors-module {
       inject-in-bootstrap = true
+      stopable = true
       name = "Kamon Executors Module"
       instrumentations = [
         "kamon.executors.instrumentation.ExecutorInstrumentation"
@@ -26,12 +28,12 @@ kanela {
   }
   class-dumper {
     # Enables the class dumper.
-    enabled = false
+    enabled = true
     # Default dir.
     dir = ${user.home}"/kanela-agent/dump"
     # By default build a jar containing all instrumented classes.
     create-jar = true
     # Default jar name.
-    jar-name = "instrumented-classes-executors"
+    jar-name = "instrumented-classes-executors-5"
   }
 }
