--- a/kamon-executors/src/main/resources/reference.conf
+++ b/kamon-executors/src/main/resources/reference.conf
@@ -21,8 +21,12 @@ kanela {
         "com.google.common.util.concurrent..*",
         "java.util.concurrent..*",
         "scala.concurrent..*",
+        "scala.concurrent.impl..*"
+        "scala.concurrent.forkjoin.ForkJoinPool",
         "akka.dispatch..*",
-        "kamon.executors..*"
+        "akka.actor..*",
+        "play.api.libs.streams..*",
+//        "kamon.executors..*"
       ]
     }
   }
