--- a/kamon-executors/src/main/resources/reference.conf
+++ b/kamon-executors/src/main/resources/reference.conf
@@ -6,8 +6,7 @@ kamon.executors {
 
 kanela {
   show-banner = true
-  log-level = "INFO"
-  debug-mode = true
+  log-level = "ERROR"
 
   modules {
     executors-module {
