do not target every runnable in the world

--- a/kamon-executors/src/main/resources/reference.conf
+++ b/kamon-executors/src/main/resources/reference.conf
@@ -21,9 +21,7 @@ kanela.modules {
       "kamon.instrumentation.executor.ExecutorTaskInstrumentation"
     ]
 
-    within = [
-      ".*"
-    ]
+    within = [ ]
 
     exclude = [
       "^java.*",
@@ -58,13 +56,9 @@ kanela.modules {
     }
 
     within = [
-      "com.google.common.util.concurrent..*",
       "java.util.concurrent..*",
-      "scala.concurrent..*",
-      "scala.concurrent.impl..*"
-      "scala.concurrent.forkjoin.ForkJoinPool",
-      "akka.actor..*",
-      "play.api.libs.streams..*",
+      "com.google.common.util.concurrent..*",
+      "scala.concurrent.forkjoin.ForkJoinPool"
     ]
   }
 }
