--- a/kamon-executors/src/test/resources/application.conf
+++ b/kamon-executors/src/test/resources/application.conf
@@ -1,4 +1,19 @@
-kamon.executors.sample-interval = 1ms
-kanela.modules.executors {
-  exclude += "^kamon.instrumentation.executor.*"
+kamon.instrumentation.executor.sample-interval = 1ms
+
+kanela.modules {
+  executor-service {
+    exclude += "^kamon.instrumentation.executor.*"
+  }
+
+  executor-service-capture-on-submit {
+    within = ${?kanela.modules.executor-service-capture-on-submit.within} [
+      "com.google.common.util.concurrent..*",
+      "java.util.concurrent..*",
+      "scala.concurrent..*",
+      "scala.concurrent.impl..*"
+      "scala.concurrent.forkjoin.ForkJoinPool",
+      "akka.actor..*",
+      "play.api.libs.streams..*",
+    ]
+  }
 }
