Fix ordering issue with reference.conf resolution

--- a/kamon-executors/src/main/resources/reference.conf
+++ b/kamon-executors/src/main/resources/reference.conf
@@ -21,7 +21,7 @@ kanela.modules {
       "kamon.instrumentation.executor.ExecutorTaskInstrumentation"
     ]
 
-    within = [ ]
+    within += [ ]
 
     exclude = [
       "^java.*",
